Fix for text overflow on player list, also removed extra white space from the top of lucky in list.

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -31,10 +31,32 @@ body {
   width: 100%;
   height: 10%;
   font-size: 14px;
+  line-height: 100%;
   list-style: none;
-  line-height: 30%;
   text-align: center;
   margin: 0;
+  padding-bottom: 24px;
+}
+
+#players-list li:first-of-type p {
+  padding-top: 10px;
+  margin-top: 0px;
+}
+
+#players-list li:first-of-type p:nth-of-type(2) {
+  padding-top: 5px;
+}
+
+#players-list li:not(:first-of-type) p:first-of-type {
+  padding-top: 0px;
+  margin-top: 0px;
+}
+
+#players-list li p:not(:first-of-type) {
+  padding-top: 0px;
+}
+
+#players-list li:not(:first-of-type) {
   padding-top: 10px;
   border-top: 2px solid white;
 }
